# WordlistRefinery

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
examples/: rockyou_subset_1k_refined.csv  small_list.txt  small_list_refined.txt
src/: analyzer.py  loader.py
src/wordlist_refinery/: __init__.py  analyzer.py  loader.py  main.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_loader.py
